@@ -1,5 +1,10 @@
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs: Added
+	  local handling of FindInFile command.
+
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* MonoDevelop.Ide.addin.xml: Add missing dependency.
 
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
